# BG_QQBot

./: .dockerignore  .env.dev  .env.prod  .gitignore  DEV_NOTES.md  Dockerfile  README.md  bot.py  pyproject.toml  requirements.txt
disabled_plugins/: queue_cmd.py
src/plugins/: bind.py  help.py  league_api.py  notify.py  queue_cmd.py  stats.py
